[project]
name = "celery-tools"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "fanyebo", email = "fanyebo00@gmail.com"},
]
dependencies = [
    "celery[redis]>=5.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
